Fix masonry grid box-shadow overflow

--- a/resources/assets/styles/components/masonry-grid.scss
+++ b/resources/assets/styles/components/masonry-grid.scss
@@ -21,4 +21,5 @@
 
 .column {
   margin-bottom: var(--grid-gutter-y);
+  transform: translateZ(0);
 }
